--- a/3.3 Image Elements/index.html
+++ b/3.3 Image Elements/index.html
@@ -5,3 +5,6 @@
 <h1>Iam a Dog Person</h1>
 <!-- Puppy image URL -->
 <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif" alt="puppy digging through the sand"/>
+
+<h1>View</h1>
+<img src="https://rbf br.photos/200/300" alt="view"/>
